--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,19 +1,17 @@
-@import './base.css';
+/* @import './base.css'; */
 @import "tailwindcss";
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+  @apply font-sans text-base text-gray-700 bg-clip-text  bg-gradient-to-r from-blue-600 to-purple-500;
 }
 
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(10, 123, 145);
   transition: 0.4s;
   padding: 3px;
+  @apply bg-clip-text bg-gradient-to-r from-cyan-950 to-purple-500;
 }
 
 @media (hover: hover) {
@@ -22,15 +20,30 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+@media (prefers-color-scheme: dark) {
   body {
     display: flex;
     place-items: center;
+    @apply bg-linear-to-r from-zinc-950 from-10% via-black via-30% to-cyan-950 to-100%;
   }
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr; */
     padding: 0 2rem;
+    
   }
+}
+
+
+.routerLinkTab {
+  @apply border-r-2 basis-1/4 hover:underline text-cyan-500;
+}
+
+.routerLinkTab.active {
+  @apply bg-cyan-50;
+}
+
+.gradientText {
+  @apply bg-clip-text text-transparent bg-gradient-to-r from-cyan-950 to-purple-500 font-semibold;
 }
